# Price-Pilot

./: .env.example  .gitattributes  .gitignore  AGENT_RULES.md  ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  INSTRUCTIONS.md  LICENSE  README.md  RELEASE_NOTES_v1.0.1.md  ROADMAP.md  SECURITY.md  SHA256SUMS.txt  docker-compose.override.yml  docker-compose.yml  github_release_v1.0.1.md  m4_observability_report.md  m5_reliability_resilience_report.md  netty_cve_fix_report.md  package-lock.json  package.json  postgresql_cve_fix_report.md  security_scan_branch_diagnosis.md  smoke_test.ps1  smoke_test.py  v1_1_architecture.md
.github/: pull_request_template.md
backend/: .dockerignore  Dockerfile  HELP.md  dependency-check-suppression.xml  pom.xml  tree.txt
docs/: AI_ASSISTANT_ARCHITECTURE.md  API_DOCUMENTATION.md  CURRENCY.md  DATA_PIPELINE.md  DECISIONS.md  DEPLOYMENT.md  DEPLOYMENT_AUDIT.md  FASTAPI_AI_ARCHITECTURE.md  INSTALLATION.md  ML_RECOMMENDATION_ENGINE.md  OBSERVABILITY.md  PRODUCTION_READINESS.md  TECHNICAL_DEBT.md  phase_1_foundation.md  price_history_architecture.md  price_history_audit_report.md  product_domain.md  (+2 more)
pricepilot-ai/: Dockerfile  pyproject.toml  requirements.txt
pricepilot-ai/app/: __init__.py  main.py
pricepilot-ai/app/api/: endpoints.py
pricepilot-ai/app/assistant/: __init__.py  memory.py  orchestrator.py  prompts.py  rag.py  response_formatter.py  router.py  tools.py
pricepilot-ai/app/config/: settings.py
pricepilot-ai/app/explainability/: __init__.py  explainer.py
pricepilot-ai/app/loaders/: __init__.py  model_registry.py
pricepilot-ai/app/schemas/: recommendation.py
pricepilot-ai/app/services/: prediction.py
pricepilot-ai/app/utils/: logger.py
pricepilot-ai/tests/: __init__.py  conftest.py  test_assistant.py  test_endpoints.py
pricepilot-python-sdk/: LICENSE  README.md  pyproject.toml  requirements.txt
pricepilot-python-sdk/examples/: demo_auth.py  demo_dashboard.py  demo_recommendations.py  demo_search.py
pricepilot-python-sdk/src/pricepilot/: __init__.py  ai.py  analytics.py  assistant.py  auth.py  client.py  config.py  dashboard.py  datasets.py  exceptions.py  http.py  ml.py  models.py  products.py  recommendations.py  utils.py  watchlists.py
pricepilot-python-sdk/tests/: test_ai.py  test_assistant.py  test_datasets.py  test_ml.py  test_recommendation_ml.py  test_sdk.py
(+314 files in other folders)
