[project]
name = "pricepilot-ai"
version = "1.0.1"
description = "FastAPI AI Inference Service for PricePilot"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "pydantic>=2.8.0",
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "prometheus-client>=0.20.0",
    "requests>=2.32.0",
    "httpx>=0.27.0",
]

[dependency-groups]
dev = [
    "pytest>=8.2.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
