[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pricepilot-sdk"
version = "0.1.0"
description = "A production-quality Python SDK for PricePilot REST API"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "PricePilot Team", email = "support@pricepilot.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "requests>=2.32.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-cov>=5.0.0",
    "responses>=0.25.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/pricepilot"]
